2003-04-08  William A. Perkins  <william.perkins@pnl.gov>

	* test/benchmark/mcn-test/results.txt (file): timed some tests
	with CGNS on/off

2003-04-04  William A. Perkins  <william.perkins@pnl.gov>

	* transport_only_module.f90: CALL open_existing instead of
	directly OPENing file; CALL error_message and status_message

	* tdg_source.f90 (tdg_read_param): CALL open_existing instead of
	directly OPENing file; CALL status_message instead of WRITEing

	* bed.f90: CALL open_existing instead of directly OPENing
	files; CALL error_message and status_message instead of WRITEing 

	* bed_source.f90: CALL open_existing instead of directly OPENing
	files; CALL error_message and status_message instead of WRITEing

	* profile_init.f90 (profile_init): CALL open_existing instead of
	directly OPENing a the file

	* plot_cgns.f90: CALL error_message instead of writing to
	error_iounit. 

	* util/cart_grid/Makefile.am (clean-local): added local clean
	target and additional EXTRA_DIST files

2003-04-03  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90: Put a bunch of plot output flags it the
	configuration file

	* plot_cgns.f90: multiple files are now output: one for the grid
	alone and several more containing a specified number of time
	slices 

2003-04-01  William A. Perkins  <william.perkins@pnl.gov>

	* util/Makefile.am: created

	* util/cart_grid/Makefile.am: created

	* configure.in: include util in build

2003-03-31  William A. Perkins  <william.perkins@pnl.gov>

	* scalars_source.f90: use open_existing

	* met_data_module.f90: use time series module to read and
	interpolate weather data

	* mass2.f90: initialize and shutdown time series module

2003-03-27  William A. Perkins  <william.perkins@pnl.gov>

	* plot_netcdf.f90 (plot_print_netcdf): timestamp should be made by
	concatenation 

2003-03-26  William A. Perkins  <william.perkins@pnl.gov>

	* makefile.sgi: was makefile

	* date_time_module.f90: moved to time_series
